--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-BIBLE_AWS_DB_ENDPOINT=
-BIBLE_AWS_DB_USER=
-BIBLE_AWS_DB_PASSWORD=
-BIBLE_AWS_DB_NAME=
-BIBLE_AWS_REGION=
-BIBLE_AWS_INSTANCE=
+APP_NAME=
+DB_ENDPOINT=
+DB_USER=
+DB_PASSWORD=
+DB_REGION=
+DB_INSTANCE=
+#DB_CONNECTION_STRING="%s:%s@tcp(%s)/%s?tls=false"
