add build step on travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ go:
 
 env:
   - GO111MODULE=on
+
+jobs:
+  include:
+    - stage: test
+      script: make test
+    - stage: build
+      script: make build
