add some validations

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ DB_USER=
 DB_PASSWORD=
 DB_REGION=
 DB_INSTANCE=
-#DB_CONNECTION_STRING="%s:%s@tcp(%s)/%s?tls=false"
+DB_CONNECTION_STRING=%s:%s@tcp(%s)/%s?tls=false
